--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@types/node": "^18",
-    "nuxt": "^3.5.0"
+    "nuxt": "^3.5.1"
+  },
+  "dependencies": {
+    "sass": "^1.62.1"
   }
 }
