--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Portfolio",
+  "name": "portfolio",
   "private": true,
   "scripts": {
     "nuxt": "nuxt",
@@ -10,12 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.5.3",
-    "@types/node": "^18",
-    "nuxt": "^3.5.1"
+    "@nuxt/devtools": "^0.6.1",
+    "@types/node": "^20.3.1",
+    "nuxt": "^3.5.3"
   },
   "dependencies": {
-    "nuxt-simple-sitemap": "^2.6.1",
-    "sass": "^1.62.1"
+    "@vercel/analytics": "^1.0.1",
+    "nuxt-simple-sitemap": "^2.6.2"
   }
 }
