--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "nuxt": "^3.5.3"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.1",
+    "@nuxtjs/robots": "^3.0.0",
     "nuxt-simple-sitemap": "^2.6.2"
   }
 }
