--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.8.3",
-    "@types/node": "^20.6.0",
-    "nuxt": "^3.7.2"
-  },
-  "dependencies": {
-    "@nuxtjs/robots": "^3.0.0",
-    "nuxt-simple-sitemap": "^3.2.9"
+    "@nuxtseo/module": "2.0.0-beta.15",
+    "@types/node": "^20.6.2",
+    "nuxt": "^3.7.3"
   }
 }
