--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.8.5",
-    "@nuxtseo/module": "2.0.0-beta.15",
-    "@types/node": "^20.6.5",
+    "@types/node": "^20.7.0",
     "nuxt": "^3.7.3"
+  },
+  "dependencies": {
+    "@nuxtjs/robots": "^3.0.0",
+    "@unlighthouse/nuxt": "^0.10.0",
+    "nuxt-simple-sitemap": "^3.3.4"
   }
 }
