--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.8.5",
-    "@types/node": "^20.7.0",
+    "@nuxt/devtools": "1.0.0-beta.0",
+    "@types/node": "^20.8.0",
     "nuxt": "^3.7.4"
   },
   "dependencies": {
     "@nuxtjs/robots": "^3.0.0",
-    "@unlighthouse/nuxt": "^0.10.0",
-    "nuxt-simple-sitemap": "^3.3.4"
+    "nuxt-simple-sitemap": "^3.3.5"
   }
 }
